Use CrudRepository (#59)
* upgrade spring boot

* use spring data jdbc