@@ -1,6 +1,7 @@
 package org.ezalori.morph.web.controller;
 
-import com.google.common.collect.ImmutableMap;
+import java.util.Map;
+
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
@@ -8,16 +9,11 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler {
-
-  /**
-   * Handle API Exception.
-   */
   @ResponseStatus(HttpStatus.BAD_REQUEST)
   @ExceptionHandler(ApiException.class)
   public ApiResponse handleApiException(Exception e) {
-    ApiResponse resp = new ApiResponse(ImmutableMap.of("message", e.getMessage()));
+    ApiResponse resp = new ApiResponse(Map.of("message", e.getMessage()));
     resp.setCode(400);
     return resp;
   }
-
 }
