@@ -1,45 +1,36 @@
 package org.ezalori.morph.web.service;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-import org.ezalori.morph.web.model.DatabaseInstance;
-import org.ezalori.morph.web.model.ExtractColumn;
+
+import lombok.RequiredArgsConstructor;
 import org.ezalori.morph.web.repository.DatabaseInstanceRepository;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.datasource.DriverManagerDataSource;
 import org.springframework.stereotype.Service;
 
 @Service
+@RequiredArgsConstructor
 public class ExtractTableService {
+  private final DatabaseInstanceRepository instanceRepo;
 
-  @Autowired
-  private DatabaseInstanceRepository instanceRepo;
+  public List<String> getColumns(
+      Integer sourceInstance, String sourceDatabase, String sourceTable) {
 
-  /**
-   * Get columns list from table.
-   */
-  public List<ExtractColumn> getColumns(Integer sourceInstance,
-      String sourceDatabase, String sourceTable) {
-
-    Optional<DatabaseInstance> instanceOpt = instanceRepo.get(sourceInstance);
-    if (!instanceOpt.isPresent()) {
-      return Collections.emptyList();
+    var instanceOpt = instanceRepo.findById(sourceInstance);
+    if (instanceOpt.isEmpty()) {
+      return List.of();
     }
 
-    DatabaseInstance instance = instanceOpt.get();
-    DriverManagerDataSource ds = new DriverManagerDataSource(
-        instance.getUrl(), instance.getUsername(), instance.getPassword());
-    JdbcTemplate jt = new JdbcTemplate(ds);
-    List<String> columnNames = jt.queryForList("SELECT column_name FROM information_schema.columns"
+    var instance = instanceOpt.get();
+    var url = String.format("jdbc:mysql://%s:%d/?useUnicode=true&characterEncoding=UTF-8",
+        instance.getHost(), instance.getPort());
+
+    var ds = new DriverManagerDataSource(url, instance.getUsername(), instance.getPassword());
+    var jt = new JdbcTemplate(ds);
+
+    return jt.queryForList(
+        "SELECT column_name FROM information_schema.columns"
         + " WHERE table_schema = ? AND table_name = ?",
         String.class, sourceDatabase, sourceTable);
-
-    return columnNames.stream()
-        .map(columnName -> new ExtractColumn(columnName, true))
-        .collect(Collectors.toList());
   }
-
 }
